[package]
name = "tokio-zmq"
description = "Provides Futures abstractions for ZeroMQ on the Tokio event-loop"
version = "0.4.0"
license = "GPL-3.0"
authors = ["Riley Trautman <asonix.dev@gmail.com>"]
repository = "https://github.com/asonix/tokio-zmq"
readme = "README.md"
keywords = ["zmq", "zeromq", "futures", "tokio"]

[dependencies]
futures = "0.2.0-alpha"
log = "0.4"
mio = "0.6"
tokio-file-unix = "0.4"
tokio-timer-futures2 = "0.2"
tokio-zmq-derive = { path = "tokio-zmq-derive", version = "0.4.0" }
zmq = "0.8"

[dependencies.tokio]
git = "https://github.com/tokio-rs/tokio.git"
features = [ "unstable-futures" ]

[dev-dependencies.tokio-executor]
git = "https://github.com/tokio-rs/tokio.git"
features = [ "unstable-futures" ]

[dev-dependencies]
env_logger = "0.4"
