[package]
name = "tokio-zmq"
description = "Provides Futures abstractions for ZeroMQ on the Tokio event-loop"
version = "0.4.0-beta"
license = "GPL-3.0"
authors = ["Riley Trautman <asonix.dev@gmail.com>"]
repository = "https://github.com/asonix/tokio-zmq"
readme = "README.md"
keywords = ["zmq", "zeromq", "futures", "tokio"]

[dependencies]
futures-core = "0.2.0-beta"
futures-sink = "0.2.0-beta"
futures-util = "0.2.0-beta"
log = "0.4"
mio = "0.6"
tokio-timer-futures2 = "0.2"
tokio-zmq-derive = { path = "tokio-zmq-derive", version = "0.4.0" }
zmq = "0.8"

[dependencies.tokio-file-unix]
version = "0.5"
git = "https://github.com/rufflewind/tokio-file-unix.git"
branch = "dev"

[dependencies.tokio-reactor]
version = "0.1"
features = [ "unstable-futures" ]

[dev-dependencies.tokio-executor]
version = "0.1"
features = [ "unstable-futures" ]

[dev-dependencies]
env_logger = "0.4"
futures-channel = "0.2.0-beta"

[dev-dependencies.tokio]
version = "0.1"
features = [ "unstable-futures" ]
