[package]
name = "tokio-zmq"
description = "Provides Futures abstractions for ZeroMQ on the Tokio event-loop"
version = "0.4.0-beta3"
license = "GPL-3.0"
authors = ["Riley Trautman <asonix.dev@gmail.com>"]
repository = "https://github.com/asonix/tokio-zmq"
readme = "README.md"
keywords = ["zmq", "zeromq", "futures", "tokio"]

[dependencies]
futures-core = "0.2.0"
futures-sink = "0.2.0"
futures-util = "0.2.0"
log = "0.4"
mio = "0.6"
tokio-file-unix = "0.5"
tokio-timer-futures2 = "0.2"
tokio-zmq-derive = { path = "tokio-zmq-derive", version = "0.4.2" }
zmq = "0.8"

[dependencies.tokio-reactor]
git = "https://github.com/tokio-rs/tokio"
features = [ "unstable-futures" ]

[dev-dependencies.tokio-executor]
git = "https://github.com/tokio-rs/tokio"
features = [ "unstable-futures" ]

[dev-dependencies]
env_logger = "0.4"
futures-channel = "0.2.0"

[dev-dependencies.tokio]
git = "https://github.com/tokio-rs/tokio"
features = [ "unstable-futures" ]
