[package]
name = "tokio-zmq-derive"
description = "Provides derivation for Tokio ZMQ Socket wrapper types"
version = "0.1.2"
license = "GPL-3.0"
authors = ["Riley Trautman <asonix.dev@gmail.com>"]
repository = "https://github.com/asonix/tokio-zmq"

[dependencies]
quote = "0.3"
syn = "0.11"
synstructure = "0.6"

[dev-dependencies.tokio-zmq]
version = "0.1"

[lib]
proc-macro = true
